force-app/main/default/objects/Krow__Integration_Log__c/fields/Krow__ExecutionDate__c.field-meta.xml
<CustomField>
    <fullName>Krow__ExecutionDate__c</fullName>
    <label>ExecutionDate</label>
    <type>DateTime</type>
</CustomField>