force-app/main/default/objects/Krow__Integration_Log__c/fields/Krow__Request__c.field-meta.xml
<CustomField>
    <fullName>Krow__Request__c</fullName>
    <label>Request</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>