force-app/main/default/objects/Krow__Integration_Log__c/fields/Krow__Response__c.field-meta.xml
<CustomField>
    <fullName>Krow__Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>