force-app/main/default/objects/Krow__Integration_Log__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HubSpot</fullName>
            </value>
            <value>
                <fullName>PipeDrive</fullName>
            </value>
            <value>
                <fullName>ZendeskShell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>